# webots-kinova

./: .gitignore  README.md
components/kinova-bridge/: CMakeLists.txt  DoxyFile  KinovaBridge.cdsl  README.md
components/kinova-bridge/etc/: config.toml
components/kinova-bridge/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
components/p3bot-bridge/: CMakeLists.txt  DoxyFile  P3BotBridge.cdsl  README.md
components/p3bot-bridge/etc/: config
components/p3bot-bridge/src/: specificworker.cpp
protos/: KinovaGen3.proto  P3Bot.proto  P3Bot_multi.proto  WaterBottleOpaque.proto
worlds/: TwoRooms.wbt  WAF.wbt  arm_base.wbt  arm_table.wbt  base.wbt  play_room.wbt  play_room_human.wbt  tables.wbt
